--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 intro:
-  lead-in: "Welcome To Our Studio!"
-  heading: It's Nice To Meet You
-  btn: Tell Me More
+  lead-in: Refine your stroke with a new perspective. Swim faster smarter.
+  heading: Our wearable sensors generate performance feedback by capturing and mapping your swim stroke.
+  btn: Learn More
 
 services:
   heading: Services
