--- a/_data/default.yml
+++ b/_data/default.yml
@@ -1,5 +1,5 @@
 brand:
-  name: Start Bootstrap
+  name: Morphwear
 menu-string: Menu
 
 nav:
@@ -14,7 +14,7 @@ nav:
   - title: Contact
     url: '#contact'
 
-copyright: Copyright &copy; Your Website 2018
+copyright: Copyright &copy; Morphwear 2021
 
 social-buttons:
   - icon: fa fa-twitter
