--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,8 +3,8 @@ intro:
   heading: Our wearable sensors generate performance feedback by capturing and mapping your swim stroke.
   btn: Learn More
 
-services:
-  heading: Services
+features:
+  heading: Features
   subheading: Lorem ipsum dolor sit amet consectetur.
   service:
     - icon: fa fa-shopping-cart
@@ -17,9 +17,23 @@ services:
       heading: Web Security
       text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
 
-portfolio:
-  heading: Portfolio
-  subheading: Lorem ipsum dolor sit amet consectetur.
+# services:
+#   heading: Services
+#   subheading: Lorem ipsum dolor sit amet consectetur.
+#   service:
+#     - icon: fa fa-shopping-cart
+#       heading: E-Commerce
+#       text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+#     - icon: fa fa-laptop
+#       heading: Responsive Design
+#       text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+#     - icon: fa fa-lock
+#       heading: Web Security
+#       text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+
+# portfolio:
+#   heading: Portfolio
+#   subheading: Lorem ipsum dolor sit amet consectetur.
 
 about:
   heading: About
@@ -46,69 +60,69 @@ about:
   end2: Of Our
   end3: Story!
 
-team:
-  heading: Our Amazing Team
-  subheading: Lorem ipsum dolor sit amet consectetur.
-  members:
-    - name: Kay Garland
-      role: Lead Designer
-      img: img/team/1.jpg
-      social-buttons:
-        - icon: fa fa-twitter
-          url: "#" 
-        - icon: fa fa-facebook
-          url: "#"
-        - icon: fa fa-linkedin
-          url: "#"
+# team:
+#   heading: Our Amazing Team
+#   subheading: Lorem ipsum dolor sit amet consectetur.
+#   members:
+#     - name: Kay Garland
+#       role: Lead Designer
+#       img: img/team/1.jpg
+#       social-buttons:
+#         - icon: fa fa-twitter
+#           url: "#" 
+#         - icon: fa fa-facebook
+#           url: "#"
+#         - icon: fa fa-linkedin
+#           url: "#"
         
-    - name: Larry Parker
-      role: Lead Marketer
-      img: img/team/2.jpg
-      social-buttons:
-        - icon: fa fa-twitter
-          url: "#"
-        - icon: fa fa-facebook
-          url: "#"
-        - icon: fa fa-linkedin
-          url: "#"
+#     - name: Larry Parker
+#       role: Lead Marketer
+#       img: img/team/2.jpg
+#       social-buttons:
+#         - icon: fa fa-twitter
+#           url: "#"
+#         - icon: fa fa-facebook
+#           url: "#"
+#         - icon: fa fa-linkedin
+#           url: "#"
 
-    - name: Diana Pertersen
-      role: Lead Developer
-      img: img/team/3.jpg
-      social-buttons:
-        - icon: fa fa-twitter
-          url: "#"
-        - icon: fa fa-facebook
-          url: "#"
-        - icon: fa fa-linkedin
-          url: "#"
+#     - name: Diana Pertersen
+#       role: Lead Developer
+#       img: img/team/3.jpg
+#       social-buttons:
+#         - icon: fa fa-twitter
+#           url: "#"
+#         - icon: fa fa-facebook
+#           url: "#"
+#         - icon: fa fa-linkedin
+#           url: "#"
 
-  text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
+#   text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
 
-clients:
-  - img: img/logos/envato.jpg
-    url: "#"
-  - img: img/logos/designmodo.jpg
-    url: "#"
-  - img: img/logos/themeforest.jpg
-    url: "#"
-  - img: img/logos/creative-market.jpg   
-    url: "#"
+# clients:
+#   - img: img/logos/envato.jpg
+#     url: "#"
+#   - img: img/logos/designmodo.jpg
+#     url: "#"
+#   - img: img/logos/themeforest.jpg
+#     url: "#"
+#   - img: img/logos/creative-market.jpg   
+#     url: "#"
 
-contact:
-  heading: Contact Us
-  subheading: Lorem ipsum dolor sit amet consectetur.
-  name: Your Name *
-  name-required: Please enter your name.
-  email: Your Email *
-  email-required: Please enter your email address.
-  phone: Your Phone *
-  phone-required: Please enter your phone number.
-  message: Your Message *
-  message-required: Please enter a message.
-  btn: Send Message
+# contact:
+#   heading: Contact Us
+#   subheading: Lorem ipsum dolor sit amet consectetur.
+#   name: Your Name *
+#   name-required: Please enter your name.
+#   email: Your Email *
+#   email-required: Please enter your email address.
+#   phone: Your Phone *
+#   phone-required: Please enter your phone number.
+#   message: Your Message *
+#   message-required: Please enter a message.
+#   btn: Send Message
 
-  js-url: '././mail/contact_me.php'
-  js-success: 'Your message has been sent. '
-  js-error: 'Sorry " + firstName + ", it seems that my mail server is not responding. Please try again later!'
-  js-error-min: 'Sorry "+i+", it seems that my mail server is not responding. Please try again later!'
+#   js-url: '././mail/contact_me.php'
+#   js-success: 'Your message has been sent. '
+#   js-error: 'Sorry " + firstName + ", it seems that my mail server is not responding. Please try again later!'
+#   js-error-min: 'Sorry "+i+", it seems that my mail server is not responding. Please try again later!'
