--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,4 +1,4 @@
-intro:
+uintro:
   lead-in: Refine your stroke with a new perspective. Swim faster smarter.
   heading: Our wearable sensors generate performance feedback by capturing and mapping your swim stroke.
   btn: Learn More
@@ -6,7 +6,7 @@ intro:
 features:
   heading: Features
   subheading: Lorem ipsum dolor sit amet consectetur.
-  service:
+  feature:
     - icon: fa fa-shopping-cart
       heading: E-Commerce
       text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
