--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,4 +1,4 @@
-uintro:
+intro:
   lead-in: Refine your stroke with a new perspective. Swim faster smarter.
   heading: Our wearable sensors generate performance feedback by capturing and mapping your swim stroke.
   btn: Learn More
