--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,6 @@
 intro:
   lead-in: Refine your stroke with a new perspective. Swim faster smarter.
-  heading: Our wearable sensors generate performance feedback by capturing and mapping your swim stroke.
+  heading: Our wearable sensors capture and process your swim stroke to reveal the finer details of your technique.
   btn: Learn More
 
 features:
