--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,6 @@
 intro:
   title: Strokespek
-  lead-in: Refine your stroke with a new perspective. Swim faster smarter.
+  lead-in: Refine your stroke from a new perspective to swim faster smarter.
   heading: Our wearable sensors capture and process your swim stroke to reveal the finer details of your technique.
   btn: Learn More
 
