--- a/_data/home.yml
+++ b/_data/home.yml
@@ -47,7 +47,7 @@ about:
   heading: About
   subheading: Lorem ipsum dolor sit amet consectetur.
   text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-  image: img/about/2.jpg
+  image: img/butterfly_swim.jpg
   alt-text: Butterfly action shot
       
 
