--- a/_data/home.yml
+++ b/_data/home.yml
@@ -4,7 +4,7 @@ intro:
   heading: A new perspective for swimming faster smarter
   btn: Learn More
   description: Our wearable sensors capture and process your swim stroke to reveal the finer details of your technique.
-  image: img/hero.png
+  image: img/freestyle_hero.png
   alt-text: Freestyle swim with sensor
 
 features:
@@ -12,7 +12,7 @@ features:
     heading: Train Smarter With Feedback
     subheading: Practice technique on your own with wearable sensors providing instant results directly to your phone or tablet.
     image: img/valueprop.png
-    subimage: img/devices.png
+    subimage: img/devices_morphwear.png
     alt-text: Overhead shot of sensor on swimmer
   two:
     heading: 
