--- a/_data/home.yml
+++ b/_data/home.yml
@@ -42,7 +42,9 @@ features:
 testimonial:
   section-heading: Testimonial
   heading: Leif Kluver
-  credentials: "D2 All American 1:36.08 200 Free"
+  credentials: 
+    - "D2 All American"
+    - "1:36.08 200 Free"
   text: “Great product. Absolutely recommend giving it a try! I was able to drop about .3 seconds on average per 25 on a set of 6x25 after reviewing initial measurements of the same set and implementing suggestions on how to change me stroke slightly.”
   image: img/testimonial.png
   alt-text: Leif Kluver
