--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,7 +3,7 @@ intro:
   title: Strokespek
   heading: A new perspective for swimming faster smarter
   btn: Learn More
-  description: Our wearable sensors capture and process your swim stroke to reveal the finer details of your technique.
+  description: Our wearable sensors capture and process stroke motions to reveal the finer details of your swimming technique.
   image: img/freestyle_hero.png
   alt-text: Freestyle swim with sensor
 
